--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -29,6 +29,8 @@ http {
     index             index.html index.htm;
 
     location / {
+      #auth_basic "";
+      #auth_basic_user_file /etc/nginx/.htpasswd;
       absolute_redirect off;
       alias            /usr/share/nginx/html/;
       expires 1d;
