PROXY_PASS_OPENAPI

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -28,6 +28,17 @@ http {
     server_name       localhost;
     index             index.html index.htm;
 
+    #proxy_pass_openapi location ~* ^/openapi\.(json|yaml)$ {
+    #proxy_pass_openapi   #auth_basic "";
+    #proxy_pass_openapi   #auth_basic_user_file /etc/nginx/.htpasswd;
+    #proxy_pass_openapi   expires -1;
+    #proxy_pass_openapi   proxy_pass #PROXY_PASS_OPENAPI#;
+    #proxy_pass_openapi   proxy_read_timeout 300;
+    #proxy_pass_openapi   proxy_set_header  X-Real-IP  $remote_addr;
+    #proxy_pass_openapi   proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
+    #proxy_pass_openapi   include cors.conf;
+    #proxy_pass_openapi }
+
     location / {
       #auth_basic "";
       #auth_basic_user_file /etc/nginx/.htpasswd;
